readded availableAddons config to buttons page
cleanup

myX button now uses the url /my$PROJECT_THEME schema instead of /user/$LOGGEDIN_USER

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -249,7 +249,8 @@ build.version = {0} ${project.version}
 
 busytags = busy tags
 
-buttons.bookmarklet                  = Browser Add-ons & Bookmarklets
+buttons.bookmarklet                  = <span class="addonhint">Browser Add-ons & </span>Bookmarklets
+buttons.bookmarklet.intro            = You can drag the following buttons into your bookmarks toolbar:
 buttons.bookmarklet1                 = Bookmarklet buttons for your bookmarks bar
 buttons.javascript                   = You need JavaScript enabled.
 buttons.javascript_appear            = will appear as
@@ -263,7 +264,7 @@ buttons.mybibsonomy                  = my{0}
 buttons.mybibsonomy_bookmark_here    = to post a bookmark quickly (in this window)
 buttons.mybibsonomy_bookmark_neww    = to post a bookmark quickly (in a new window)
 buttons.mybibsonomy_internetExplorer = right-click on the button, then click <em>add to favorites</em>
-buttons.mybibsonomy_intro            = If you do not wish to install a browser add-on or if your browser is not supported yet, you can drag the following buttons into your bookmarks toolbar:
+buttons.mybibsonomy_intro            = If you do not wish to install a browser add-on, you can drag the following buttons into your bookmarks toolbar:
 buttons.mybibsonomy_mybibsonomy      = to jump directly to your personal home page
 buttons.mybibsonomy_part_five        = , which you can also reach from every page with the 
 buttons.mybibsonomy_part_four        = personal home page
@@ -274,7 +275,7 @@ buttons.mybibsonomy_part_two         = button to your links toolbar you can acce
 buttons.mybibsonomy_publication_here = to post a publication quickly (in this window)
 buttons.mybibsonomy_publication_neww = to post a publication quickly (in a new window)
 buttons.page.introduction            = On this page you can download the <em>{0} browser addons</em> and <em>bookmarklets</em> to simply post web pages and publications with only a click. Further, if you run your own website, you might want to use one of our <em>JavaScript snippets</em> to create a button on that page, that will allow other users to bookmark your website clicking it.
-buttons.page.introduction.short      = Here, you can download the <em>browser addons</em> and <em>bookmarklets</em> that ease posting web pages and publications. Further, for webmasters, we offer two <em>JavaScript snippets</em> to be incorporated into existing web pages.
+buttons.page.introduction.short      = Here, you can download <span class="addonhint">the <em>browser addons</em> and </span><em>bookmarklets</em> that ease posting web pages and publications. Further, for webmasters, we offer two <em>JavaScript snippets</em> to be incorporated into existing web pages.
 buttons.select_code                  = select code
 buttons.shortcut_bibtex              = Shortcut for posting publication references
 buttons.shortcut_bibtex_end          = Then you just need to select (highlight) a publicatio entry you find on a web page and after clicking on the button the entry will be stored in {0}. 
