--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -221,7 +221,8 @@ build.version = {0} ${project.version}
 
 busytags = Beliebte Tags
 
-buttons.bookmarklet                  = Browser Addons & Bookmarklets
+buttons.bookmarklet                  = <span class="addonhint">Browser Addons & </span>Bookmarklets
+buttons.bookmarklet.intro            = 
 buttons.bookmarklet1                 = Bookmarklet-Buttons f\u00FCr Ihre Lesezeichen-Leiste
 buttons.javascript                   = F\u00FCr diese Funktion m\u00FCssen Sie JavaScript in Ihrem Browser aktivieren.
 buttons.javascript_appear            = wird angezeigt als
@@ -235,7 +236,7 @@ buttons.mybibsonomy                  = mein{0}
 buttons.mybibsonomy_bookmark_here    = um schnell ein Lesezeichen einzutragen (in diesem Fenster)
 buttons.mybibsonomy_bookmark_neww    = um schnell ein Lesezeichen einzutragen (in einem neuen Fenster)
 buttons.mybibsonomy_internetExplorer = Klicken Sie mit der rechten Maustaste auf den Button und dann auf <em>zu Favoriten hinzug\u00FCgen</em>
-buttons.mybibsonomy_intro            = Wenn Sie kein Add-on installieren wollen oder noch kein Add-on f\u00FCr Ihren Browser existiert, k\u00F6nnen Sie einfach die folgenden Buttons in Ihre Lesezeichen-Leiste ziehen:
+buttons.mybibsonomy_intro            = Wenn Sie kein Add-on installieren wollen, k\u00F6nnen Sie einfach die folgenden Buttons in Ihre Lesezeichen-Leiste ziehen:
 buttons.mybibsonomy_mybibsonomy      = um direkt auf Ihre pers\u00F6nliche Seite zu springen
 buttons.mybibsonomy_part_five        = Diese k\u00F6nnen Sie auch mit dem 
 buttons.mybibsonomy_part_four        = pers\u00F6nliche Seite springen. 
@@ -246,7 +247,7 @@ buttons.mybibsonomy_part_two         = -Schaltfl\u00E4che in die Linkleiste Ihre
 buttons.mybibsonomy_publication_here = um schnell eine Publikation einzutragen (in diesem Fenster)
 buttons.mybibsonomy_publication_neww = um schnell eine Publikation einzutragen (in einem neuen Fenster)
 buttons.page.introduction            = Auf dieser Seite finden Sie die <em>{0}-Browser-Add-ons</em> und <em>Bookmarklets</em> zum schnellen Eintragen von Webseiten und Publikationen per Knopfdruck. Falls Sie selbst eine Webseite betreiben, dann k\u00F6nnen Sie mit unseren <em>JavaScript-Snippets</em> einfach eine Schaltfl\u00E4che auf Ihrer Webseite erzeugen mit der andere Benutzer Ihre Seite direkt in {0} eintragen k\u00F6nnen.
-buttons.page.introduction.short      = Hier finden Sie unsere <em>Browser-Add-ons</em> und <em>Bookmarklets</em> zum schnellen Eintragen von Webseiten und Publikationen. F\u00FCr Webseitenbetreiber bieten wir zudem noch zwei <em>JavaScript-Snippets</em> an.
+buttons.page.introduction.short      = Hier finden Sie unsere <span class="addonhint"><em>Browser-Add-ons</em> und </span><em>Bookmarklets</em> zum schnellen Eintragen von Webseiten und Publikationen. F\u00FCr Webseitenbetreiber bieten wir zudem noch zwei <em>JavaScript-Snippets</em> an.
 buttons.select_code                  = Code markieren
 buttons.shortcut_bibtex              = Verkn\u00FCpfung f\u00FCr das Eintragen von Publikationen
 buttons.shortcut_bibtex_end          = Daraufhin m\u00FCssen Sie lediglich die hervorgehobenen Publikationsfelder f\u00FCllen. Danach werden die Eintr\u00E4ge in {0} gespeichert.
