+missing message keys

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1296,6 +1296,7 @@ post.resource.address                                   = Adresse
 post.resource.address.help                              = Die Adresse des Verlags oder der Institution
 post.resource.annote                                    = Kommentar
 post.resource.annote.help                               = Ein Kommentar, der von manchen BibTeX-Stilen benutzt wird
+post.resource.approved                                  = Auf Richtigkeit \u00FCberpr\u00FCft
 post.resource.author                                    = Autor(en)
 post.resource.author.help                               = Die Namen der Autoren im Format "Nachname, Vorname" - ein Autor pro Zeile
 post.resource.bibtexAbstract                            = Zusammenfassung
@@ -1725,7 +1726,7 @@ restore = wiederherstellen
 
 save = Speichern
 
-save.and.rate = Speichern &amp; Bewerten
+save.and.rate = Speichern & Bewerten
 
 scraper_info.all_sites                = Eine Liste aller unterst\u00FCtzen Kataloge
 scraper_info.all_sites_header         = Alle unterst\u00FCtzten Seiten
