--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1304,6 +1304,7 @@ post.resource.address                                   = address
 post.resource.address.help                              = address of the publisher or institution
 post.resource.annote                                    = annote
 post.resource.annote.help                               = a comment, used by some BibTeX styles
+post.resource.approved                                  = correctness approved
 post.resource.author                                    = author(s)
 post.resource.author.help                               = each author on a separate line, format "Lastname, Firstname"
 post.resource.bibtexAbstract                            = abstract
