added missing key navi.automatic.groupRequest

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1040,6 +1040,7 @@ navi.apikey                      = API key\u0009
 navi.author                      = author
 navi.author.hint                 = author(s)
 navi.authors                     = authors
+navi.automatic.groupRequest      = create group
 navi.basket                      = clipboard
 navi.basket.empty                = your clipboard is empty
 navi.basket.inactive             = Sign in to see your picked items.
