--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -994,6 +994,7 @@ navi.apikey                      = API-Schl\u00fcssel
 navi.author                      = Autor
 navi.author.hint                 = Autoren
 navi.authors                     = Autoren
+navi.automatic.groupRequest      = Gruppe erstellen
 navi.basket                      = Ablage
 navi.basket.empty                = Ihre Ablage ist leer
 navi.basket.inactive             = Melden Sie sich an, um den Inhalt Ihrer Ablage zu sehen.
@@ -1043,7 +1044,7 @@ navi.group                       = Gruppe
 navi.group.cap                   = Gruppen
 navi.group.groupRequest          = Eine neue Gruppe erstellen
 navi.group.hint                  = <Gruppe>
-navi.groupRequest                = Gruppe erstellen
+navi.groupRequest                = Gruppe beantragen
 navi.groups                      = Gruppen
 navi.groups.all                  = Alle Gruppen
 navi.groups.cap                  = Gruppen
@@ -1539,7 +1540,7 @@ post.resource.series.help                               = Der Name einer Reihe v
 post.resource.spaceseparated                            = durch Leerzeichen getrennt
 post.resource.suggested                                 = Vervollst\u00e4ndigung
 post.resource.suggestion.help                           = Andere Benutzer verwenden:
-post.resource.suggestion.hint                           = Es gibt Vorschl\u00E4ge zu dieser Eingabe
+post.resource.suggestion.hint                           = Es gibt Vorschl\u00e4ge zu dieser Eingabe
 post.resource.tags                                      = Tags
 post.resource.tags.cap                                  = Tags
 post.resource.tags.comma                                = Bitte best\u00e4tigen Sie, dass Sie Kommas/Semikolons in den Tags verwenden m\u00f6chten. 
