restored several messages and fixed special character issues

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -624,6 +624,8 @@ error.user_page_without_username            = Diese Seite existiert leider nicht
 error.viewable_page_not_logged_in           = F\u00FCr die Anzeige dieser Seite ist es n\u00F6tig, im System angemeldet zu sein. Wir ben\u00F6tigen diese Information, um Zugang zu Ihren Gruppenmitgliedschaften zu haben. Um die \u00F6ffentlichen Eintr\u00E4ge einer Gruppe anzuzeigen, verwenden Sie bitte das Schema /group/GRUPPENNAME
 error.viewable_page_without_group           = Diese Seite existiert leider nicht auf unserem Server. Um Eintr\u00E4ge anzuzeigen, deren Sichtbarkeit auf die Gruppe GRUPPENNAME gesetzt ist, verwenden Sie bitte das URL-Schema /viewable/GRUPPENNAME.
 
+example = Beispiel
+
 export = Export
 
 export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
@@ -780,6 +782,7 @@ group.doesnotexist                                       =
 group.doesnotexist.header                                = Gruppe existiert nicht
 group.groupRequest.description                           = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
 group.groupRequest.reason                                = Begr\u00FCndung
+group.groupRequest.userName                              = Benutzername
 group.leave                                              = Gruppe verlassen
 group.memberOf                                           = Mitglied
 group.publicationReportingSettings.externalReportingUrl  = Adresse des externen Meldungsservices
@@ -939,10 +942,10 @@ login.withUsernameAndPassword = Mit Benutzername und Passwort anmelden
 
 mail.activation.body                 = \nVielen Dank, dass Sie sich f\u00FCr {1} entschieden haben! Die Aktivierung Ihres Accounts war erfolgreich.\n\nIhr Benutzername ist {0}\nIhre {1} Homepage ist {5}\n\nSchauen Sie sich doch die Hilfeseiten oder die FAQ an:\n{2}help_de\n{2}help_de/faq\n\nNeuigkeiten zu {1} erfahren Sie in unserem Blog:\n{3}\n\nAntworten an diese E-Mail-Adresse werden gel\u00F6scht, bitte senden Sie Fragen an {4}.
 mail.activation.subject              = Die Aktivierung Ihres {1}-Accounts war erfolgreich!
-mail.groupInvite.body                = \nHallo {0}!\n\nBenutzer {1} hat Sie eingeladen, der Gruppe {2} beizutreten.\n\nBesuchen Sie {3}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
-mail.groupInvite.subject             = Beitrittseinladung zur Gruppe {2}
 mail.group.activation.body           = Hallo {0}!\n\nIhre Gruppe {1} wurde erstellt. Sie k\u00F6nnen die Gruppenseite unter {2} besuchen und gruppenspezifische Settings unter {3} editieren.\n\nWir w\u00FCnschen Ihnen weiterhin viel Spa\u00DF bei der Nutzung von {4}!\n\nAntworten an diese E-Mail-Adresse werden gel\u00F6scht, bitte senden Sie Fragen an {5}.
 mail.group.activation.subject        = Ihre Gruppe {1} wurde erstellt!
+mail.groupInvite.body                = \nHallo {0}!\n\nBenutzer {1} hat Sie eingeladen, der Gruppe {2} beizutreten.\n\nBesuchen Sie {3}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
+mail.groupInvite.subject             = Beitrittseinladung zur Gruppe {2}
 mail.joinGroupRequest.body           = \nHallo {0}!\n\nBenutzer {1} bittet um Erlaubnis, Ihrer Gruppe beitreten zu d\u00FCrfen.\n\nBegr\u00FCndung: {2}\n\nBesuchen Sie {3}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
 mail.joinGroupRequest.denied.body    = \nHallo {1}\n\nIhr Beitrittsgesuch zur Gruppe {0} wurde abgelehnt.\n\nBegr\u00FCndung: {2}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
 mail.joinGroupRequest.denied.subject = Ihr Beitrittsgesuch zur Gruppe {0}
@@ -982,6 +985,7 @@ name = Name
 navi.about                       = Impressum
 navi.account                     = Account
 navi.admin                       = Administrator
+navi.admin.group                 = Gruppen
 navi.admin_lucene                = Admin: Lucene
 navi.admin_nospammer             = Admin: Keine Spammer
 navi.admin_spam                  = Admin Spam
@@ -1840,6 +1844,7 @@ settings.group.joinRequests                                 = Gruppen-Mitgliedss
 settings.group.login                                        = Leider sind Sie nicht mit dem zugeh\u00F6rigen Gruppenkonto angemeldet. Bitte melden Sie sich mit dem Gruppennamen {0} an.
 settings.group.memberList                                   = Mitgliederliste
 settings.group.memberList.help                              = Die Sichtbarkeit der Gruppenmitgliederliste einstellen
+settings.group.name                                         = Gruppenname
 settings.group.noGroups                                     = Sie geh\u00F6ren keiner Gruppe an.
 settings.group.pendingInvites                               = Offene Einladungen
 settings.group.pendingInvites.headline                      = Sie wurden in folgende Gruppen eingeladen
@@ -1860,13 +1865,13 @@ settings.group.reporting.address                            = Meldungsservice
 settings.group.reporting.mail                               = E-Mail-Meldungseinstellungen
 settings.group.reporting.update                             = Meldungseinstellungen aktualisieren
 settings.group.reqGroup                                     = Eine neue Gruppe beantragen
-settings.group.reqGroup.button                              = Gruppe beantragen
-settings.group.reqGroup.description                         = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
-settings.group.reqGroup.reason                              = Begr\u00FCndung
 settings.group.reqGroup.automatic                           = Eine neue Gruppe erstellen
 settings.group.reqGroup.automatic.button                    = Gruppe erstellen
 settings.group.reqGroup.automatic.description               = Sie k\u00F6nnen hier eine neue Gruppe erstellen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und eine kurze Beschreibung der Gruppe. Ihre Gruppe wird automatisch erstellt.
 settings.group.reqGroup.automatic.reason                    = Kurzbeschreibung
+settings.group.reqGroup.button                              = Gruppe beantragen
+settings.group.reqGroup.description                         = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
+settings.group.reqGroup.reason                              = Begr\u00FCndung
 settings.group.requestGroup.description                     = Eine neue Gruppe kann auf der Seite <a href="{0}">{1}</a> beantragt werden.
 settings.group.requestGroup.link                            = neue Gruppe beantragen
 settings.group.revUser.button                               = ablehnen
@@ -1906,7 +1911,7 @@ settings.overwrite.help.browser                             = Die Lesezeichen au
 settings.overwrite.help.delicious                           = Delicious Lesezeichen \u00FCberschreiben Lesezeichen in Ihrer Sammlung zur selben URL 
 settings.password.change.current.error                      = Ihr aktuelles Passwort ist nicht richtig.
 settings.password.change.new.error                          = Bitte best\u00E4tigen Sie das neue Passwort.
-settings.password.change.success                            = Ihr Passwort wurde erfolgreich ge\u00E4ndert\u044e
+settings.password.change.success                            = Ihr Passwort wurde erfolgreich ge\u00E4ndert\u044E
 settings.password.help.delicious                            = Ihr Passwort bei Delicious
 settings.passwordwithoutspaces                              = (ohne Leerzeichen)
 settings.picture.current                                    = Aktuelles Bild
