renamed goldstandard -> community fixed messages, fixed urls, fixed actions

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -11,6 +11,8 @@ actions.admin.group.administrate = Group Administration
 actions.admin.group.alltagsets   = all tagsets
 actions.admin.group.tagset       = new tagset
 actions.admin.group.tagsets      = tagsets
+actions.communityPost            = community post
+actions.communityPost.title      = visit or create a community post
 
 additional = additional
 
