--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -9,6 +9,8 @@ actions.admin.group.administrate = Gruppen-Administration
 actions.admin.group.alltagsets   = alle Tagmengen
 actions.admin.group.tagset       = neue Tagmenge
 actions.admin.group.tagsets      = Tagmengen
+actions.communityPost            = Community Eintrag
+actions.communityPost.title      = Community Eintrag besuchen oder neu anlegen
 
 additional = zus\u00E4tzliche
 
