--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -13,6 +13,9 @@ actions.admin.group.tagset       = new tagset
 actions.admin.group.tagsets      = tagsets
 actions.communityPost            = community post
 actions.communityPost.title      = visit or create a community post
+actions.community_post           = community post
+actions.community_post.create    = create community post
+actions.community_post.no        = For this resource no community post has been created yet. Community posts are created and improved by the community of all users. 
 
 additional = additional
 
@@ -130,10 +133,6 @@ bibtex.actions.additional_url.delete.title   = delete this additional URL
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
 bibtex.actions.bibtex.title                  = show this publication in BibTeX format
-bibtex.actions.communityPost                 = community post
-bibtex.actions.community_post                = community post
-bibtex.actions.community_post.create         = create community post
-bibtex.actions.community_post.no             = For this publication there is no community post yet. Community Posts helps to discuss and rate publications collectively with other users. 
 bibtex.actions.copy.inactive                 = Sign in to copy this publication into your collection.
 bibtex.actions.copy.title                    = copy this publication to your repository
 bibtex.actions.delete.confirm                = Do you really want to delete this publication?
