--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -9,8 +9,11 @@ actions.admin.group.administrate = Gruppen-Administration
 actions.admin.group.alltagsets   = alle Tagmengen
 actions.admin.group.tagset       = neue Tagmenge
 actions.admin.group.tagsets      = Tagmengen
-actions.communityPost            = Community Eintrag
+actions.communityPost            = Community Post
 actions.communityPost.title      = Community Eintrag besuchen oder neu anlegen
+actions.community_post           = Community Post
+actions.community_post.create    = Community Post erstellen
+actions.community_post.no        = Zu dieser Ressource gibt es noch keinen Community Post. Community Posts erm\u00F6glichen die gemeinsame Pflege von Metadaten zu einer Ressource. 
 
 additional = zus\u00E4tzliche
 
@@ -103,10 +106,6 @@ bibtex.actions.additional_url.delete.title   = diese zus&auml;tzliche URL l&ouml
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
 bibtex.actions.bibtex.title                  = Diese Publikation im BibTeX-Format anzeigen
-bibtex.actions.communityPost                 = Community Post
-bibtex.actions.community_post                = Community Post
-bibtex.actions.community_post.create         = Community Post erstellen
-bibtex.actions.community_post.no             = Zu dieser Publikation gibt es noch keinen Community Post. Community Posts erm\u00F6glichen Publikationen gemeinschaftlich mit anderen Nutzern zu diskutieren und zu bewerten. 
 bibtex.actions.copy.inactive                 = Melden Sie sich an um diese Publikation in Ihre eigene Sammlung zu kopieren.
 bibtex.actions.copy.title                    = Diese Publikation in die eigene Sammlung kopieren
 bibtex.actions.delete.confirm                = Wollen Sie diese Publikation wirklich l\u00F6schen?
