fixed getting started link

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -717,6 +717,7 @@ footer.academicPuma   = PUMA
 footer.buttons        = Browser Buttons
 footer.cookies        = <a href="/help_en/Cookies">Cookies</a>
 footer.developer      = Developer
+footer.gettingStarted = Getting Started
 footer.integration    = Integration
 footer.links          = Useful Links
 footer.overview       = Overview
