--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -689,11 +689,12 @@ footer.academicPuma   = PUMA
 footer.buttons        = Browser Buttons
 footer.cookies        = <a href="/help_de/Cookies">Cookies</a>
 footer.developer      = Entwickler
+footer.gettingStarted = Erste Schritte
 footer.integration    = Integration
 footer.links          = N\u00FCtzliche Links
 footer.overview       = \u00DCberblick
 footer.privacyContact = Kontakt und Datenschutz
-footer.quickstart     = Erste Schritte
+footer.quickstart     = <a href="/help_de/Programmoberfl\u00E4che">Erste Schritte</a>
 footer.scraperInfo    = Unterst\u00FCtzte Kataloge
 footer.team           = Team
 footer.twitter        = Folge uns auf Twitter
