NEJMScraper test resource is modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NEJMScraperUnitURLTest1.bib
@@ -12,10 +12,17 @@ number = {3},
 pages = {250-257},
 year = {2012},
 doi = {10.1056/NEJMra1100109},
-note ={PMID: 22256807},
+    note ={PMID: 22256807},
 
-URL = {http://www.nejm.org/doi/full/10.1056/NEJMra1100109},
-eprint = {http://www.nejm.org/doi/pdf/10.1056/NEJMra1100109}
+URL = { 
+        http://dx.doi.org/10.1056/NEJMra1100109
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1056/NEJMra1100109
+    
+}
+
 }
 
 
