headline added on batchedit page

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1269,7 +1269,7 @@ post.meta.add                                           = Hinzuf\u00FCgen
 post.meta.advanced                                      = erweitert
 post.meta.asGroup                                       = f\u00FCr
 post.meta.asPrivate                                     = als
-post.meta.batch_edit                                    = eigene Eintr\u00E4ge bearbeiten
+post.meta.batch_edit                                    = Eigene Eintr\u00E4ge bearbeiten
 post.meta.changedOn                                     = ge\u00E4ndert am
 post.meta.copy_this_post                                = Eintrag kopieren
 post.meta.display                                       = Anzeige
