fixed message correct usage of inheritance (instanceof checks are evil)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -519,7 +519,7 @@ error.field.oneResourceMin                   = please choose at least one resour
 error.field.required                         = This field is required.
 error.field.valid.acceptPrivacy              = To use {0}, you need to agree to our general terms and conditions.
 error.field.valid.admin.whitelist            = Please enter a valid regular expression.
-error.field.valid.alreadyStoredCommunityPost = A community posts with that data already exists. Please use the existing post.
+error.field.valid.alreadyStoredCommunityPost = A community post with that data already exists. Please use the existing post.
 error.field.valid.alreadyStoredPublication   = You already have this publication in your collection.
 error.field.valid.authorOrEditor             = Please enter authors or editors for this publication.
 error.field.valid.authorOrEditor.parseError  = The author or editor field caused the following parse error: {0}
