added missing messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1815,11 +1815,14 @@ settings.group.error.mandatoryFieldsNotSet       = At least one of the required 
 settings.group.error.userDoesNotExist            = The user you wanted to invite does not exist.
 settings.group.header                            = group settings
 settings.group.homepage                          = homepage
+settings.group.inviteUser.button                 = invite
+settings.group.inviteUser.help                   = The name of the user that should be invited.
 settings.group.login                             = Sorry, you are not logged in with the corresponding group account. Please login as group {0}.
 settings.group.memberList                        = member list
 settings.group.memberList.empty                  = no users in group
 settings.group.memberList.help                   = set the privacy level of your member list
 settings.group.noGroups                          = You aren't a member of any group.
+settings.group.pendingInvites                    = pending invites
 settings.group.profileInfo                       = The information you enter here will be displayed on the <a href="{2}">group's CV page</a>.
 settings.group.realname                          = name of the group
 settings.group.reporting                         = publication reporting settings
