converted newlines to br's

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -828,7 +828,7 @@ group.reporting.headline                                 = report publication to
 group.reporting.mail.subject                             = New publication reported
 group.updatePermission.update                            = update permissions
 
-grouprequest.mail.body    = <a href="{2}">{1}</a> has requested a new group.\n\nName: {0}\nDescription: {3}\nReason: {4}\n\n<a href="{5}">Admin Group Page</a>
+grouprequest.mail.body    = <a href="{2}">{1}</a> has requested a new group.<br /><br />Name: {0}<br />Description: {3}<br />Reason: {4}<br /><br /><a href="{5}">Admin Group Page</a>
 grouprequest.mail.subject = New group request ({0})
 
 groups = groups
