Scrapers and test resources are modified.

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/EditLibScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/EditLibScraperUnitURLTest.bib
@@ -6,7 +6,7 @@
 	number = { 1 },
 	year = { 2004 },
 	pages = { 5--23 },
-	publisher = { AACE },
+	publisher = { Association for the Advancement of Computing in Education (AACE) },
 	issn = { 1522-8185 },
 	abstract = { This article will show how children (9-12 years old) describe the Internet in terms of different models. It is related to how they understand the reliability of the Internet as well as some other aspects. The study was carried out in a 4th-grade class in 1998/1999. The study has an ethnographic approach. With inspiration from information research on human-computer-interaction, the children's descriptions are categorized as different models: the surrogate model, the metaphor model, and network representation. The children, who describe the Internet as a network representation, know a lot about how the Internet works and they also talk in terms of reliability. It appears that some knowledge about the system facilitate this reasoning, but it does not appear that their knowledge has to be very great. However, children with very little knowledge seem to have greater difficulties to see through the system. },
 	url = { http://www.editlib.org/p/12795 }
