--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest2.bib
@@ -2,7 +2,7 @@
 author = {Kenneth M. (Kenneth Michael), Johnson and Paul R. Voss and Roger B. Hammer and Glenn Victor, Fuguitt and Scott. McNiven},
 year = {2005},
 title = {Temporal and Spatial Variation in Age-Specific Net Migration in the United States},
-url = {http://muse.jhu.edu/journals/demography/v042/42.4johnson.html},
+url = {https://muse.jhu.edu/journals/demography/v042/42.4johnson.html},
 journal = {Demography},
 issn = {1533-7790},
 volume = {42},
