--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PubMedCentralScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PubMedCentralScraperUnitURLTest.bib
@@ -1,15 +1,16 @@
-@Article{Ellis:2004:J-Clin-Pathol:14693850,
-author = "Ellis, V and Charlett, A and Bendall, R",
+@article{ellis2003comparison,
+abstract = {Aims: To determine the suitability of primary gel separation tubes for the storage of frozen sera intended for serological testing. Methods: Blood samples from 102 patients were collected into gel separation tubes. The sera from these samples were split between the primary gel separation tubes and conventional plastic storage tubes and frozen. A year later, the tubes were thawed and anti-rubella IgG concentrations were compared for the serum pairs using the Wilcoxon signed rank test. Results: No significant difference was detected between the two storage methods. Conclusions: Frozen storage of serum samples in primary gel separation tubes is a practical alternative to storing separated sera in secondary containers. Adopting this practice has advantages for laboratories in reducing specimen handling and reducing errors in labelling stored samples.},
+author = {Ellis, V and Charlett, A and Bendall, R},
+comment = {0570104[PII]
+14693850[pmid]},
+issn = {14724146},
+journal = {Journal of Clinical Pathology},
+month = {jul},
+number = {1},
+pages = {104--106},
+publisher = {Copyright 2004 Journal of Clinical Pathology},
 title = {A comparison of IgG anti-rubella activity in frozen serum stored in primary gel separation tubes or secondary tubes},
-abstract = {To determine the suitability of primary gel separation tubes for the storage of frozen sera intended for serological testing.Blood samples from 102 patients were collected into gel separation tubes. The sera from these samples were split between the primary gel separation tubes and conventional plastic storage tubes and frozen. A year later, the tubes were thawed and anti-rubella IgG concentrations were compared for the serum pairs using the Wilcoxon signed rank test.No significant difference was detected between the two storage methods.Frozen storage of serum samples in primary gel separation tubes is a practical alternative to storing separated sera in secondary containers. Adopting this practice has advantages for laboratories in reducing specimen handling and reducing errors in labelling stored samples.},
-journal = "J Clin Pathol",
-year = "2004",
-volume = "57",
-number = "1",
-pages = "104-106",
-month = "Jan",
-pmid = "14693850",
-url = "http://www.ncbi.nlm.nih.gov/pubmed/14693850/",
-doi = ""
+url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1770189/},
+volume = {57},
+year = {2003}
 }
-
