--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest1.bib
@@ -1,19 +1,19 @@
-@article{doi:10.1080/713659338,
-author = {McCullagh, C.B.},
-title = {The Logic of the History of Ideas},
-journal = {Australasian Journal of Philosophy},
-volume = {80},
-number = {1},
-pages = {124-125},
-year = {2002},
-doi = {10.1080/713659338},
+@article{doi:10.1080/09540091.2014.906388,
+author = {Ahmed, Soha and Zhang, Mengjie and Peng, Lifeng},
+title = {Improving feature ranking for biomarker discovery in proteomics mass spectrometry data using genetic programming},
+journal = {Connection Science},
+volume = {26},
+number = {3},
+pages = {215-243},
+year = {2014},
+doi = {10.1080/09540091.2014.906388},
 
 URL = { 
-        http://www.tandfonline.com/doi/abs/10.1080/713659338
+        http://dx.doi.org/10.1080/09540091.2014.906388
     
 },
 eprint = { 
-        http://www.tandfonline.com/doi/pdf/10.1080/713659338
+        http://dx.doi.org/10.1080/09540091.2014.906388
     
 }
 
