--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest1.bib
@@ -2,7 +2,7 @@
 author = {K. McNay and Jane, Humphries and Stephan  Klasen},
 year = {2005},
 title = {Excess Female Mortality in Nineteenth-Century England and Wales: A Regional Analysis},
-url = {http://muse.jhu.edu/journals/social_science_history/v029/29.4mcnay.html},
+url = {https://muse.jhu.edu/journals/social_science_history/v029/29.4mcnay.html},
 journal = {Social Science History},
 issn = {1527-8034},
 volume = {29},
